--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
   "description": "A simple app to forward Twilio SMS messages",
   "repository": "https://github.com/bcoyle73/twilio-sms-forward.git",
   "logo": "",
-  "keywords": ["twilio", "sms", "messages"]
+  "keywords": ["twilio", "sms", "messages"],
 	"env": {
 	  "SECRET_TOKEN": {
 	    "description": "Your Twilio Secret Auth Token",
