rename env variable to AUTH_TOKEN in app.json

--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
   "repository": "https://github.com/bcoyle73/twilio-sms-forward.git",
   "keywords": ["twilio", "sms", "messages"],
 	"env": {
-	  "SECRET_TOKEN": {
+	  "AUTH_TOKEN": {
 	    "description": "Your Twilio Secret Auth Token",
 	    "required": "true"
 	  }
